# grab_ql

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bandit.yaml  build_nuitka.sh  dev-requirements.txt  do_release.sh  get_nuitka_deps.sh  get_patchelf.sh  grab_codeql.py  install.sh  nuitka-requirements.txt  pyproject.toml  requirements.txt  tqdm.pyi
.github/workflows/: codeql-analysis.yml
.trunk/: trunk.yaml
grab_codeql/: __init__.py  grab_codeql.py
test/: __init__.py  test_0_help.py  test_1_dryrun.py  test_2_cli_ver.py  test_3_cli_ver_fail.py  test_help.py
