[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grab_codeql"
version = "0.0.2b1"
dependencies = [
    'importlib-metadata; python_version>"3.8"',
    "requests>=2.28.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.64.0",
    "distro>=1.3.0",
]

[project.scripts]
grab-codeql = "grab_codeql.grab_codeql:main"



